log
Thu Mar 26 07:16:37 PM UTC 2026: 
 list.c | 78 +++++++++---------------------------------------------------------
 1 file changed, 10 insertions(+), 68 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
list.c: In function ‘nextList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
list.c: In function ‘lastList’:
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
list.c: In function ‘prevList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
list.c: In function ‘popCurrent’:
list.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
dd64942
Thu Mar 26 07:18:27 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
list.c: In function ‘nextList’:
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
list.c: In function ‘lastList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
list.c: In function ‘prevList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
list.c: In function ‘popCurrent’:
list.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
8e21daa
Thu Mar 26 07:26:55 PM UTC 2026: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:27: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   47 |     return list->current->dato;
      |                           ^~~~
      |                           data
list.c: In function ‘prevList’:
list.c:56:27: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   56 |     return list->current->dato;
      |                           ^~~~
      |                           data
list.c: In function ‘nextList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
list.c: In function ‘lastList’:
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
list.c: In function ‘prevList’:
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
list.c: In function ‘popCurrent’:
list.c:84:1: error: control reaches end of non-void function [-Werror=return-type]
   84 | }
      | ^
cc1: all warnings being treated as errors
56f3546
Thu Mar 26 07:27:29 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
list.c: In function ‘popCurrent’:
list.c:84:1: error: control reaches end of non-void function [-Werror=return-type]
   84 | }
      | ^
cc1: all warnings being treated as errors
7ad3e81
Thu Mar 26 07:38:03 PM UTC 2026: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:62:5: error: ‘nodo’ undeclared (first use in this function)
   62 |     nodo = createNode(data);
      |     ^~~~
list.c:62:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:63:5: error: ‘head’ undeclared (first use in this function)
   63 |     head->prev = nodo;
      |     ^~~~
list.c: In function ‘popCurrent’:
list.c:88:1: error: control reaches end of non-void function [-Werror=return-type]
   88 | }
      | ^
cc1: all warnings being treated as errors
28d5839
Thu Mar 26 07:39:05 PM UTC 2026: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:62:5: error: ‘nodo’ undeclared (first use in this function)
   62 |     nodo = createNode(data);
      |     ^~~~
list.c:62:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:63:5: error: ‘head’ undeclared (first use in this function)
   63 |     head->prev = nodo;
      |     ^~~~
32119d6
Thu Mar 26 07:40:02 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:62:5: error: ‘nodo’ undeclared (first use in this function)
   62 |     nodo = createNode(data);
      |     ^~~~
list.c:62:5: note: each undeclared identifier is reported only once for each function it appears in
6bddf65
